# FlukyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  FlukyEngine.sln  LICENSE  README.md  shaderc.cmake
FlukyEngine/: CMakeLists.txt  FlukyEngine.cpp  FlukyEngine.h  FlukyEngine.vcxproj  FlukyEngine.vcxproj.filters  main.cpp
FlukyEngine/Graphics/: window.cpp  window.h
FlukyEngine/x64/Debug/: FlukyEngine.exe.recipe  FlukyEngine.ilk  vc142.idb
FlukyEngine/x64/Debug/FlukyEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlukyEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
doc_doxygen/doc/: menudata.js
examples/: CMakeLists.txt  ex_bgfx.cpp  ex_easy3d.cpp  ex_imgui.cpp
examples-fluky/: CMakeLists.txt  ex_audio.cpp  ex_camera.cpp  ex_cameratest.cpp  ex_components.cpp  ex_cube.cpp  ex_deletegobject.cpp  ex_gameLvl1.cpp  ex_gamelvl.cpp  ex_input.cpp  ex_multiaudio.cpp  ex_physics.cpp  ex_players.cpp  ex_text.cpp  ex_triggerphysics.cpp  ex_world.cpp
examples-fluky/textures/: Bricks074_1K_Color.dds  Bricks074_1K_NormalDX.dds  Plastic008_1K_Color.dds  Plastic008_1K_Color_1.dds  Plastic008_1K_Color_2.dds  Plastic008_1K_Color_3.dds  Plastic008_1K_Color_4.dds  Plastic008_1K_Color_5.dds  Plastic008_1K_Color_6.dds  Plastic008_1K_NormalGL.dds
source/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.hpp  FlukyEngine.hpp
source/Audio/: Audio.cpp  Audio.hpp  AudioComponent.cpp  AudioComponent.hpp  AudioManager.cpp  AudioManager.hpp
source/Graphics/: window.cpp  window.h
source/PhysicsCollision/: CollisionInformation.hpp  CollisionObjectComponent.hpp  CollisionTriggerComponent.hpp  PhysicsCollisionEvents.hpp  PhysicsCollisionSystem.cpp  PhysicsCollisionSystem.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp
source/Platform/: CameraComponent.hpp  Input.cpp  Input.hpp  InputComponent.cpp  InputComponent.hpp  JoystickInput.cpp  JoystickInput.hpp  KeyCodes.hpp  Window.cpp  Window.hpp
source/Rendering/: BoxComponent.cpp  BoxComponent.hpp  Figures.cpp  Figures.hpp  Text.cpp  Text.hpp
source/World/: Component.hpp  GameObject.hpp  PlayerComponent.hpp  RegistryHandler.hpp  Scene.cpp  Scene.hpp  TransformComponent.cpp  TransformComponent.hpp  World.cpp  World.hpp  WorldTest.hpp
source/examples/: CMakeLists.txt
